oled_configurator/templates/style.css
.canvas {
    border-width: 5px;
    border-style: solid;
    border-color: dimgray;
    display: block;
    cursor: crosshair;
    margin: auto;
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-crisp-edges;
    image-rendering: pixelated;
    image-rendering: crisp-edges;
}

.hiddenTool {
    display: none;
}

.toolbox {
    background-color: #202020;
    display: block;
    margin: auto;
}

.toolboxHeader {
    border-bottom-style: solid;
    border-bottom-color: dimgray;
}

body {
    background-color: #121212;
}

.navbar {
    background-color: #101010;
    border-bottom-style: solid;
    border-bottom-color: dimgray
}

.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 70px;
    background-color: #323232;
    color: #fff;
    text-align: center;;
    padding: 5px 0;
    border-radius: 6px;
    bottom: 100%;
    left: 50%;
    margin-left: -35px;
    
    position:absolute;
    z-index: 1;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
    font-size: 12px;
}

.tooltip .tooltiptext::after {
    content: " ";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #323232 transparent
        transparent transparent;
}

#brushSize {
    width: 38%;
}

